--- a/frontend/src/components/Teacher_dashboard/Teacher_profile.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_profile.css
@@ -1,7 +1,9 @@
+
+
 .avatar {
     vertical-align: middle;
-    width: 8rem;
-    height: 8rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     border: 2px solid black;
     margin-right: 2rem;
@@ -10,44 +12,82 @@
     background-size: contain;
 }
 
-.profilePic {
-    vertical-align: middle;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    border: 2px solid black;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    margin-top: 3px;
-    background-size: contain;
-}
+
 
 .profilebody {
-    border: 5px solid red;
-    /* background-image: url("iic.png"); */
     background-size: 70rem;
     background-position: center;
-    margin: 2rem;
-    height: 34rem;
-    margin-top: 6rem;
+    background: rgb(248, 246, 246);
+    height: 35rem;
+}
+
+.profilebody>h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+    background: #D9D9D9;
 }
 
 .profileenroll {
     margin-inline: 2rem;
-    display: flex;
     height: 10rem;
-    align-items: center;
-    font-weight: 20rem;
+    text-align: center;
 }
 
 .personaldetails {
     margin-inline: 2rem;
     display: flex;
-    margin-top: 3rem;
     border: 5px black;
+    display: flex;
+    justify-content: center;
 }
 
-.detailone {
+.details{
+    background: #949292;
+    padding: 0;
+}
+
+.details>*{
     margin-left: 2rem;
-    margin-right: 10rem;
+    color: white;
+}
+
+.details>h3{
+    margin-top: 1rem;
+    color: black;
+}
+
+.detailcontent{
+    text-align: -webkit-center;
+    width: 31rem;
+}
+
+.detailblock{
+    justify-content: space-evenly;
+    margin-top: 3rem;
+}
+
+.profileContent{
+    margin-top: 2rem;
+    background: #D9D9D9;
+
+}
+
+.buttons{
+   
+    margin-top: 1rem;
+    text-align: center;
+    margin-left: 2rem;
+}
+.buttons>button{
+    margin-right: 2rem;
+    background: #2BB0A8;
+    height: 3rem;
+    width: 8rem;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 10% ;
+    margin-bottom: 2vh;
 }
