--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -46,7 +46,7 @@
 
 .nav-text a {
     text-decoration: none;
-    color: #f5f5f5;
+    color: black;
     font-size: 18px;
     width: 95%;
     height: 100%;
