--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -39,6 +39,7 @@
     justify-content: start;
     align-items: center;
     padding: 8px 0px 8px 16px;
+    font-size: 18px;
     list-style: none;
     height: 60px;
     color: black
@@ -52,7 +53,6 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 16px;
     border-radius: 4px;
 }
 .semester{
@@ -61,8 +61,8 @@
     display: none;
 }
 .semester>*{
-    margin-bottom: 0;
-    height: 2rem;
+    margin-bottom: 2px;
+    height: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
