--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -9,7 +9,8 @@
     font-size: 2rem;
     background: none;
 }
-.heading{
+
+.heading {
     display: flex;
     margin-left: 2rem;
     align-items: center;
@@ -55,19 +56,35 @@
     align-items: center;
     border-radius: 4px;
 }
-.semester{
+
+.semester {
     text-align: center;
     background-color: #f5f5f5;
     display: none;
 }
-.semester>*{
+
+.semester>* {
     margin-bottom: 2px;
     height: 2.5rem;
     display: flex;
+    color: inherit;
+    text-decoration: none;
     align-items: center;
     justify-content: center;
 }
-.semester>p:hover{
+
+p{
+    margin-bottom: 0;
+}
+
+.semester>a{
+     color: inherit;
+     text-decoration: none;
+     display: flex;
+     align-items: center;
+}
+
+.semester>a:hover {
     background-color: grey;
 }
 
