--- a/frontend/src/components/Class Schedule/CS.css
+++ b/frontend/src/components/Class Schedule/CS.css
@@ -1,18 +1,17 @@
-.warning
-{
+.warning {
     background-color: red;
     z-index: 10;
     transform: translateY(-20rem);
 }
 
-.center{
+.center {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
-.popup{
+.popup {
     width: 300px;
     height: 270px;
     background-color: lightgrey;
@@ -23,7 +22,7 @@
     text-align: center;
 }
 
-.popup .icon{
+.popup .icon {
     margin: 5px 0px;
     width: 50px;
     height: 50px;
@@ -34,42 +33,44 @@
     line-height: 60px;
 }
 
-.popup .icon i.fa{
+.popup .icon i.fa {
     font-size: 30px;
     color:
-  #34f234 ;
+        #34f234;
 }
 
-.popup .title{
+.popup .title {
     margin: 5px 0px;
     font-size: 30px;
     font-weight: 600;
 }
 
-.popup .description{
+.popup .description {
     color: #222;
     font-size: 15px;
     padding: 5px;
 }
 
-.popup .dismiss-btn{
+.popup .dismiss-btn {
     margin-top: 15px;
 }
 
-.popup .dismiss-btn button{
-    padding: 10px 20px ;
+.popup .dismiss-btn button {
+    padding: 10px 20px;
     background: #111;
     color: #f5f5f5;
     border: 2px solid #111;
-     font-size: 16px;
-     font-weight: 600 ;
-     outline: none;
-     cursor: pointer;
-     border-radius: 10px;
-     transition: all 300ms ease-in-out;
+    font-size: 16px;
+    font-weight: 600;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 300ms ease-in-out;
 }
 
-.popup .dismiss-btn button:hover{
+.popup .dismiss-btn button:hover {
     color: #111;
     background: #f5f5f5;
 }
+
+
