--- a/frontend/src/components/Class Schedule/CS.css
+++ b/frontend/src/components/Class Schedule/CS.css
@@ -14,7 +14,7 @@
 .popup {
     width: 300px;
     height: 270px;
-    background-color: lightgrey;
+    background-color: yellow;
     padding: 30px 20px;
     border-radius: 10px;
     box-sizing: border-box;
