--- a/frontend/src/components/Class Schedule/classschedule.css
+++ b/frontend/src/components/Class Schedule/classschedule.css
@@ -28,13 +28,13 @@
 
 .time-form-label {
     font-weight: bold;
+    margin-right: 1rem;
 }
 
 .form-label {
     margin-left: 20%;
     margin-right: 20px;
     font-weight: bold;
-    margin-top: 20px;
 }
 
 .class-form-control-1 {
@@ -48,7 +48,10 @@
 }
 
 .btn-class {
-    margin-left: 45%;
-    margin-right: 45%;
-    margin-top: 40px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.submit-btn{
+    width: 9rem;
 }
