--- a/frontend/src/components/Attendance Report/attendance_report.css
+++ b/frontend/src/components/Attendance Report/attendance_report.css
@@ -20,16 +20,8 @@
     padding-bottom: 5px;
   }
 
-.button-3 {
-   margin-left: 38%;
-}
-
-#butn1 {
+#butn{
     margin-right: 2rem;
-    width: 10rem;
-}
-
-#butn2 {
     width: 10rem;
 }
 
