--- a/frontend/src/components/Assignment_Upload/upload_assignment.css
+++ b/frontend/src/components/Assignment_Upload/upload_assignment.css
@@ -5,6 +5,7 @@
 }
 
 .file-card {
+    margin-top: 1rem;
     padding: 1em;
     display: flex;
     flex-direction: column;
@@ -16,12 +17,15 @@
     min-height: 230px;
 }
 
+
 .file-inputs {
     position: relative;
     margin-bottom: 1.5em;
 }
 
 .file-inputs>input {
+    z-index: 2;
+    opacity: 0;
     position: relative;
     text-align: right;
     cursor: pointer;
@@ -30,6 +34,8 @@
 }
 
 .file-inputs>button {
+    top: 0;
+    height: 3rem;
     position: absolute;
     width: 100%;
     display: flex;
@@ -48,6 +54,7 @@
 
 .infocontent{
     margin-top: 1rem;
+    font: 1.5rem;
 }
 
 .main {
@@ -67,7 +74,12 @@
     justify-content: center;
     padding-left: 5%;
     padding-right: 5%;
+    margin: 0 20%;
     
+}
+
+.deadline{
+    margin-right: 1rem;
 }
 
 .uploadheading{
@@ -78,6 +90,7 @@
 .uploadassignmentbody{
     height: 100vh;
     background: rgb(248, 246, 246);
+    
 }
 
 .submitbutton{
