--- a/frontend/src/components/Attendance Report/attendance_report.css
+++ b/frontend/src/components/Attendance Report/attendance_report.css
@@ -8,7 +8,7 @@
 
 .table-2 {
     margin-left: 10%;
-    margin-right:10%;
+    margin-right: 10%;
     margin-top: 40px;
     margin-bottom: 40px;
 }
@@ -18,16 +18,17 @@
     margin-bottom: 0;
     padding-top: 5px;
     padding-bottom: 5px;
-  }
+}
 
-#butn{
+#butn {
     margin-right: 2rem;
-    width: 10rem;
+    width: 11rem;
+    margin-bottom: 3rem;
 }
 
 .attrep-1a {
     background-color: rgb(196, 255, 255);
     margin-bottom: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
