--- a/frontend/src/components/Teacher_dashboard/sem.css
+++ b/frontend/src/components/Teacher_dashboard/sem.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     color: white;
+    box-shadow: rgb(50 50 93) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
     background: #2BB0A8;
 }
 
