--- a/frontend/src/components/Teacher_dashboard/sem.css
+++ b/frontend/src/components/Teacher_dashboard/sem.css
@@ -1,6 +1,7 @@
 .card-body {
     height: 10rem;
     display: flex;
+    border-radius: 5px;
     align-items: center;
     justify-content: center;
     color: white;
