--- a/frontend/src/components/Teacher_dashboard/sem.css
+++ b/frontend/src/components/Teacher_dashboard/sem.css
@@ -5,10 +5,15 @@
     align-items: center;
     justify-content: center;
     color: white;
-    box-shadow: rgb(50 70 70) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
+    border: none;
+    box-shadow: 1px 1px 5px #333;
+    /* box-shadow: rgb(50 70 70) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset; */
     background: #2BB0A8;
+    transition: transform .2s;
 }
-
+.card-body:hover {
+    transform: scale(1.02); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
 .semheadline {
     text-align: center;
     margin-bottom: 2rem;
