--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -2,7 +2,8 @@
     background: #2BB0A8;
     height: 80px;
     display: flex;
-    box-shadow: 0px 0px 5px #333, rgb(69, 69, 122) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
+    box-shadow: 0px 0px 5px #333;
+    /* box-shadow: rgb(50 50 93) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset; */
 }
 
 .menu-bars {
@@ -28,7 +29,9 @@
     transition: 850ms;
 }
 
-
+.nav-menu-items {
+    background: #d6e6e7;
+}
 
 .nav-menu.active {
     box-shadow: 3px 0 15px rgb(78 130 147);
@@ -70,8 +73,7 @@
     border-radius: 4px;
 }
 
-.nav-text span {
-    margin-left: 16px;
+.nav-text>span {
     font-size: 18px;
     font-weight: 501;
     color: rgb(0, 104, 74);
@@ -136,6 +138,6 @@ p {
     align-items: center;
 }
 
-.navbar-toggle span {
-    font-weight: 600;
+span {
+    margin-left: 16px;
 }
