--- a/frontend/src/components/homepage/homepage.css
+++ b/frontend/src/components/homepage/homepage.css
@@ -2,19 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 50vh;
+    height: 100vh;
     border: 20px;
-    background-color: aliceblue;
-    position: relative;
+}
+
+.image1 {
+    position: absolute;
+    width: 35%;
+    left: 0px;
+    bottom: 0px;
+}
+
+.image2 {
+    position: absolute;
+    width: 40%;
+    right: 0px;
+    bottom: 0px;
 }
 
 .homepage .button {
     background: #1877f2;
-    border: 1px solid #1877f2
-    ;
+    border: 1px solid #1877f2;
     color: #fff;
     font-size: 1.25rem;
+    margin-right: 2rem;
     padding: 0.5rem;
     margin: 0.5rem 0;
     border-radius: 8px;
@@ -22,6 +33,20 @@
     cursor: pointer;
 }
 
-.classopedialogo{
-   width: 70%;
+.bttn11 {
+    background-color: rebeccapurple;
+}
+
+
+.classopedialogo {
+    text-align: center;
+    padding-top: 3rem;
+    display: flex;
+    Width: 50%;
+    justify-content: center;
+}
+
+.Clogo {
+    display: flex;
+    justify-content: center;
 }
