--- a/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
@@ -6,20 +6,6 @@ html{
     display: flex;
 }
 
-/* .headline{
-    background: black;
-    height: 100%;
-    width: 12rem;
-    clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 100%, 75% 0);
-} */
-/* .headline>a{
-    padding-left: 1rem;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .profilePic {
     vertical-align: middle;
     width: 3rem;
@@ -31,25 +17,6 @@ html{
     margin-top: 3px;
     background-size: contain;
 }
-
-/* .sidebar {
-    padding: 0;
-    box-shadow: 3px 0 5px rgb(202, 201, 201);
-    height: 100%;
-    width: 12rem;
-} */
-
-/* .navbackground {
-    background: #2BB0A8;
-    padding: 0;
-    height: 4rem;
-} */
-
-/* #sidebar {
-    width: 12rem;
-    padding: 0;
-    margin-top: 4rem;
-} */
 
 .dashblocks {
     display: flex;
@@ -65,10 +32,15 @@ html{
     height: 140px;
     width: 256px;
     text-align: center;
-    border-radius: 5%;
+    border-radius: 5px;
     margin: 8px;
+    box-shadow: 1px 1px 5px rgb(121, 120, 120);
+    transition: transform .2s;
 }
-
+.blockcolour:hover {
+    transform: scale(1.05);
+    
+}
 .blockcolour>div {
     margin-top: 1rem;
 }
@@ -86,17 +58,6 @@ html{
     margin-bottom: 2rem;
 }
 
-/* .detailcontent {
-    font-size: 10px;
-    text-align: center;
-    background: #2BB0A8;
-}
-.detailcontent>h2{
-     font-size: 1rem;
-}
-.detailcontent>h4{
-    font-size: 0.7rem;
-} */
 
 .dashboardbackground{
     background: rgb(248, 246, 246);
@@ -139,6 +100,7 @@ html{
     justify-content: center;
     width: 66vw;
     background: #D9D9D9;
+    /* box-shadow: 0px 1px 5px rgb(121, 120, 120); */
 }
 
 .classinfoval>* {
@@ -148,33 +110,9 @@ html{
     align-items: center;
     justify-content: center;
     width: 18vw;
-    background: #2BB0A8 ;
+    background: #2BB0A8;
     margin-right: 2rem;
+    /* box-shadow: 1px 1px 5px rgb(121, 120, 120); */
 }
 
-/* #semester{
-    border: none;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    
-}
 
-#semester>h6{
-    background: #D9D9D9;
-    margin-bottom: 0;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2px;
-} */
-
-/* .semestercontent{
-    display: none;
-}
-
-#semester>h6:hover{
-    background: grey;
-}
- */
