--- a/frontend/src/components/Scheduled_Class_List/scheduledclass.css
+++ b/frontend/src/components/Scheduled_Class_List/scheduledclass.css
@@ -5,3 +5,27 @@
 .table{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+.btn-primary {
+    color: white;
+    background-color: #1E6A44;
+    border-color: #ffffff;
+}
+
+.btn-primary:hover {
+    color: #ffffff;
+    background-color: #157215;
+    border-color: #006600;
+}
+
+.btn-primary-1 {
+    color: white;
+    background-color: #A80B01;
+    border-color: #ffffff;
+}
+
+.btn-primary-1:hover {
+    color: #ffffff;
+    background-color: #CA0F03;
+    border-color: #006600;
+}
