--- a/frontend/src/components/Assignment_Upload/upload_assignment.css
+++ b/frontend/src/components/Assignment_Upload/upload_assignment.css
@@ -30,7 +30,7 @@
     text-align: right;
     cursor: pointer;
     height: 46px;
-    max-width: 200px;
+    width: 100%;
 }
 
 .file-inputs>button {
