--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -116,7 +116,11 @@ p {
 }
 
 .semester>a:hover {
-    background-color: grey;
+    background: #2BB0A8;
+    box-shadow: 0px 0px 5px #333,
+        rgb(0 100 100) 0px 30px 60px -12px inset,
+        rgb(0 0 0 / 30%) 0px 18px 36px -18px inset
+   
 }
 
 .nav-text:hover {
