--- a/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
@@ -29,6 +29,7 @@ html {
 
 .dashblocks>a {
     width: fit-content;
+    color: black;
 }
 
 .blockcolour {
@@ -106,7 +107,7 @@ html {
     margin-top: 2rem;
     height: 3rem;
     display: flex;
-    box-shadow: rgb(0 0 0 / 26%) 2px 8px 7px, rgb(0 3 7 / 23%) 1px 8px 1px;
+    /* box-shadow: rgb(0 0 0 / 26%) 0px 0px 5px, rgba(128, 128, 128, 0.23) 1px 8px 1px; */
     align-items: center;
     justify-content: center;
     width: 66vw;
@@ -120,9 +121,13 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: rgb(0 0 0 / 26%) 2px 8px 7px, rgb(0 3 7 / 23%) 1px 8px 1px;
+    /* box-shadow: rgb(0 0 0 / 26%) 0px 0px 5px, rgba(128, 128, 128, 0.23) 1px 8px 1px; */
     width: 18vw;
     background: #2BB0A8;
     margin-right: 2rem;
     /* box-shadow: 1px 1px 5px rgb(121, 120, 120); */
+}
+.background{
+    width: 100vw;
+   box-shadow: 2px 0px 2px rgb(147, 145, 145);
 }
