--- a/frontend/src/components/Class Schedule/classschedule.css
+++ b/frontend/src/components/Class Schedule/classschedule.css
@@ -7,16 +7,20 @@
 }
 
 .class-form-label {
-    /* margin-right: 20px; */
+    margin-right: 1rem;
     font-weight: bold;
 }
+
 .form-control-a {
     background-color: white;
 }
 
 .abc-1 {
+
+    margin: 0 20%;
     display: flex;
-    /* justify-content: center; */
+    align-items: stretch;
+    justify-content: space-between;
 }
 
 .class-form-control {
@@ -24,26 +28,24 @@
     /* align-items: center; */
     text-align: center;
     background-color: rgb(196, 255, 255);
-    border-color:rgb(196, 255, 255) ;
+    border-color: rgb(196, 255, 255);
     border-radius: 4px;
     height: 2rem;
-    margin-top: 20px;   
+    margin-top: 20px;
 }
 
 .time-form-label {
     font-weight: bold;
-    /* margin-right: 1rem; */
+    margin-right: 1rem;
 }
 
 .class-div {
-    margin-left: 20%;
-   
+    width: 50%;
 }
 
 .time-div {
-    position: absolute;
-  right: 20%;
-    
+    width: 50%;
+    text-align: end;
 }
 
 .form-label {
@@ -55,37 +57,37 @@
     width: 100%;
     border-radius: 4px;
     background-color: rgb(196, 255, 255);
-    border-color:rgb(196, 255, 255) ;
+    border-color: rgb(196, 255, 255);
     border-style: groove;
     height: 10rem;
 }
 
 .btn-class {
-  text-align: center;
-  margin-top: 40px;
+    text-align: center;
+    margin-top: 40px;
 }
 
-.submit-btn{
+.submit-btn {
     width: 9rem;
 }
 
-.selectsubjectcontainer{
+.selectsubjectcontainer {
     margin: 0 20%;
 }
 
-.messagecontent{
-    margin : 0 20%
+.messagecontent {
+    margin: 0 20%
 }
 
 #date-1 {
-    margin-right: 4%;
+    margin-right: 1rem;
 }
 
 /* #time-1 {
    margin-left: 4%;
 } */
 
- /* #time-12 {
+/* #time-12 {
     margin-right: 20%;
      text-align: right; 
 }  */
