--- a/frontend/src/components/Attendance Report/attendance_report.css
+++ b/frontend/src/components/Attendance Report/attendance_report.css
@@ -32,3 +32,19 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+#mytable-2 {
+    margin-left: 20%;
+   margin-right: 20%; 
+   width: 60%;
+   /* margin-top: 40px; */
+   margin-bottom: 80px;
+}
+
+#string-12 {
+    margin-top: 40px;
+}
+
+#sem-23 {
+    margin-top: 40px;
+}
