--- a/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
+++ b/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
@@ -11,7 +11,7 @@
 
 #mytable-1 {
      margin-left: 20%;
-    /* margin-right: 20%;  */
+    margin-right: 20%; 
     width: 60%;
     margin-top: 40px;
     margin-bottom: 80px;
