--- a/frontend/src/components/Teacher_dashboard/Teacher_profile.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_profile.css
@@ -17,7 +17,7 @@ a {
 
 .profilebody {
     display: flex;
-    background: violet;
+    background: white;
     justify-content: center;
     height: 100vh;
 }
