--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -1,20 +1,19 @@
-
 .emp-profile {
     padding: 3%;
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 0.5rem;
-    text-align: center;
     background: #fff;
+    text-align: center;
 }
 
 .profile-img {
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .profile-img img {
-    width: 70%;
-    height: 100%;
+    width: 13rem;
 }
 
 .profile-img .file {
@@ -109,4 +108,13 @@
 .profile-tab p {
     font-weight: 600;
     color: #0062cc;
+}
+
+.teacherInfo{
+    justify-content: center;
+}
+
+.profile-head{
+    text-align: center;
+    margin-bottom: 1rem;
 }
