--- a/frontend/src/components/Student_dashboard/notifications.css
+++ b/frontend/src/components/Student_dashboard/notifications.css
@@ -4,6 +4,12 @@
     margin: 10px;
     height: 50px;
     border-radius: 10px;
-    border: black;
     box-shadow: 2px 2px 10px rgb(219, 217, 217);
+    text-align: center;
+}
+.notification
+{    
+
+    margin-top: 2.5rem;
+    align-items: center;
 }
