--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -22,19 +22,12 @@
 }
 
 .profile-img img {
-    width: 13rem;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
 }
 
-.profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
-}
+
 
 .profile-img .file input {
     position: absolute;
@@ -73,56 +66,20 @@
     font-weight: 600;
 }
 
-.profile-head .nav-tabs {
-    margin-bottom: 5%;
-}
 
-.profile-head .nav-tabs .nav-link {
-    font-weight: 600;
-    border: none;
-}
-
-.profile-head .nav-tabs .nav-link.active {
-    border: none;
-    border-bottom: 2px solid #0062cc;
-}
 
 .profile-work {
     padding: 14%;
     margin-top: -15%;
 }
 
-.profile-work p {
-    font-size: 12px;
-    color: #818182;
-    font-weight: 600;
-    margin-top: 10%;
-}
-
-.profile-work a {
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
-}
-
-.profile-work ul {
-    list-style: none;
-}
-
-.profile-tab label {
-    font-weight: 600;
-}
-
-.profile-tab p {
-    font-weight: 600;
-    color: #0062cc;
-    text-align: initial;
-}
 
 .teacherInfo {
     justify-content: center;
     display: flex;
+    margin: 0 24%;
+    font-size: 100%;
+    font-weight: 600;
 }
 
 .profile-head {
@@ -141,4 +98,15 @@
     margin-right: 1rem;
     background: #198754;
     margin-bottom: 2rem;
+}
+
+.keys{
+    text-align: initial;
+    transform: translateX(0%);
+}
+
+.values{
+    text-align: initial;
+    transform: translateX(38%);
+    color: #0062cc;
 }
