--- a/frontend/src/components/Teacher_dashboard/Teacher_profile.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_profile.css
@@ -43,7 +43,7 @@ a {
 }
 
 .details {
-    padding: 0;
+    padding-top: 10%;
 }
 
 .details>* {
@@ -57,6 +57,9 @@ a {
 
 .detailcontent {
     text-align: -webkit-center;
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
 }
 
 
@@ -86,11 +89,11 @@ a {
     margin-bottom: 2vh;
 }
 
-.resetpass{
+.resetpass {
     margin-left: 1rem;
 }
 
-.profilephoto{
+.profilepicture {
     width: 7rem;
     height: 7rem;
     border-radius: 50%;
