--- a/frontend/src/components/Filters/filters.css
+++ b/frontend/src/components/Filters/filters.css
@@ -1,4 +1,4 @@
-.attrep-1 {
+/* .attrep-1 {
     text-align: center;
 }
 
@@ -31,4 +31,14 @@
     margin-bottom: 0;
     padding-top: 5px;
     padding-bottom: 5px;
+} */
+
+.form-control-8 {
+    width: 60%;
+    text-align: center;
+    margin-left: 20%;
+    background-color: white;
+    border-radius: 5px;
+    
+    height: 30px;
 }
