--- a/frontend/src/components/Scheduled_Class_List/scheduledclass.css
+++ b/frontend/src/components/Scheduled_Class_List/scheduledclass.css
@@ -29,3 +29,11 @@
     background-color: #CA0F03;
     border-color: #006600;
 }
+
+#mytable-5 {
+    margin-left: 20%;
+   margin-right: 20%; 
+   width: 60%;
+   margin-top: 40px;
+   margin-bottom: 80px;
+}
