--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -4,15 +4,25 @@
     font-weight: 600;
 }
 
+.photo_block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 1rem; */
+    padding-top: 1rem;
+}
+
 
 .emp-profile {
     margin-bottom: 3%;
     border-radius: 0.5rem;
-    background: lightseagreen;
+    background: lightgray;
     text-align: center;
     transform: translateY(3rem);
-    margin: 0 10%;
-    box-shadow: rgb(0 0 0 / 17%) 0px -23px 25px 0px inset, rgb(0 0 0 / 15%) 0px -36px 30px 0px inset, rgb(0 0 0 / 10%) 0px -79px 40px 0px inset, rgb(0 0 0 / 6%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 4px 2px, rgb(0 0 0 / 9%) 0px 8px 4px, rgb(0 0 0 / 9%) 0px 16px 8px, rgb(0 0 0 / 9%) 0px 32px 16px;
+    margin: 0 15%;
+    height: 30rem;
+
+    /* box-shadow: rgb(0 0 0 / 17%) 0px -23px 25px 0px inset, rgb(0 0 0 / 15%) 0px -36px 30px 0px inset, rgb(0 0 0 / 10%) 0px -79px 40px 0px inset, rgb(0 0 0 / 6%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 4px 2px, rgb(0 0 0 / 9%) 0px 8px 4px, rgb(0 0 0 / 9%) 0px 16px 8px, rgb(0 0 0 / 9%) 0px 32px 16px; */
 }
 
 .profile-img {
@@ -77,14 +87,19 @@
 .teacherInfo {
     justify-content: center;
     display: flex;
-    margin: 0 24%;
+    margin: 0 10%;
     font-size: 100%;
-    font-weight: 600;
+    background: gray;
+    border-radius: 8px;
+    padding: 25px;
+    /* width: 70%; */
+    /* transform: translateX(-89px); */
 }
 
 .profile-head {
     text-align: center;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
+    margin-left: 1rem;
 }
 
 .profile-head>h4{
@@ -100,13 +115,20 @@
     margin-bottom: 2rem;
 }
 
+#butn {
+    border: none;
+}
+
 .keys{
     text-align: initial;
-    transform: translateX(0%);
+    transform: translateX(25%);
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .values{
     text-align: initial;
-    transform: translateX(38%);
-    color: #0062cc;
+    transform: translateX(30%);
+    color: #ffffff;
+    font-size: 20px;
 }
