--- a/frontend/src/components/Filters/filters.css
+++ b/frontend/src/components/Filters/filters.css
@@ -39,6 +39,6 @@
     margin-left: 20%;
     background-color: white;
     border-radius: 5px;
-    
-    height: 30px;
+    margin-top: 20px;
+    height: 35px;
 }
