--- a/frontend/src/components/Attendance list/attendance.css
+++ b/frontend/src/components/Attendance list/attendance.css
@@ -59,10 +59,10 @@ tr {
 
  }
 
- select{
+ /* select{
   text-align: center;
   background-color: blue;
- }
+ } */
 
  .checkbox{
     transform: scale(1.5);
