--- a/frontend/src/components/Filters/filters.css
+++ b/frontend/src/components/Filters/filters.css
@@ -6,12 +6,7 @@
     background-color: #2bb0a8;
 }
 
-.table-2 {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
+
 
 .attrep1 {
     text-align: center;
@@ -33,12 +28,51 @@
     padding-bottom: 5px;
 } */
 
+/* .selectsubjectcontainer-1 {
+    margin: 0 20%;
+} */
+
 .form-control-8 {
     width: 60%;
     text-align: center;
     margin-left: 20%;
-    background-color: white;
+    background-color: #2bb0A8;
     border-radius: 5px;
     margin-top: 20px;
     height: 35px;
+}
+
+
+/* #button_block5 {
+    text-align: center;
+    width: 10rem;
+    margin: 0 44%;
+} */
+
+
+/*
+} */
+
+.table-24 {
+ margin: 0 20%;
+    margin-bottom: 40px;
+}
+
+#button_block5 {
+    margin-top: 20px;
+}
+
+ #date_block1 {
+    text-align: center;
+ }
+
+.form-control-12 {
+    width: 15rem;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.overall-1 {
+    margin-top: 20px;
+    text-align: center;
 }
