--- a/frontend/src/components/Assignment_Upload/upload_assignment.css
+++ b/frontend/src/components/Assignment_Upload/upload_assignment.css
@@ -17,7 +17,14 @@
     min-height: 230px;
 }
 
+.time_block12 {
+    border-radius: 5px;
+    text-align: center;
+}
 
+#deadline_block {
+    text-align: center;
+}
 .file-inputs {
     position: relative;
     margin-bottom: 1.5em;
