--- a/frontend/src/components/Class Schedule/classschedule.css
+++ b/frontend/src/components/Class Schedule/classschedule.css
@@ -96,12 +96,31 @@
     justify-content: center;
 }
 
-.btn-class
+#subject
 {
-    animation: shake 600ms;
+    animation: shake 700ms;
+}
+#date-1 
+{
+    animation: shake 700ms;
+}
+#date
+{
+    animation: shake 700ms;
+}
+#time-1
+{
+    animation: shake 700ms;
 }
 
-/* @keyframes shake {
+#time
+{
+    animation: shake 700ms;
+}
+
+
+
+@keyframes shake {
 
     0%,
     100% {
@@ -112,13 +131,111 @@
     30%,
     50%,
     70%,90%{
-        transform: translateX(-10px);
+        transform: translateX(-5px);
     }
 
     20%,
     40%,
     60%,
     80% {
-        transform: translateX(10px);
+        transform: translateX(5px);
     }
+}
+
+/* .blacky
+{
+    background-color: black;
+    height: 89.5vh;
+    width: 100%;
+    opacity: 0.7;
+    transform: translateY(-99.8%);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center
 } */
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.tick{
+  position: relative;
+  height: 125px;
+  width: 125px;
+  display: inline-block;
+  border: 5px solid rgba(255,255,255,0.2);
+  border-radius: 50%;
+  border-left-color: #5cb85c;
+  animation: rotate 1s linear infinite;
+}
+@keyframes rotate {
+  50%{
+    border-left-color: #9b59b6;
+  }
+  75%{
+    border-left-color: #e67e22;
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+.tick .check-icon{
+  display: none;
+}
+.tick .check-icon:after{
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 28px;
+  transform: scaleX(-1) rotate(135deg);
+  height: 56px;
+  width: 28px;
+  border-top: 4px solid #05d005;
+  border-right: 4px solid #05d005;
+  transform-origin: left top;
+  animation: check-icon 0.8s ease;
+}
+@keyframes check-icon {
+  0%{
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20%{
+    height: 0;
+    width: 28px;
+    opacity: 1;
+  }
+  40%{
+    height: 56px;
+    width: 28px;
+    opacity: 1;
+  }
+  100%{
+    height: 56px;
+    width: 28px;
+    opacity: 1;
+  }
+}
+.inputcheck{
+  display: none; 
+}
+.inputcheck:checked ~ .tick .check-icon{
+  display: block;
+}
+.inputcheck:checked ~ .tick{
+  animation: none;
+  border-color: #05d005;
+  transition: border 0.5s ease-out;
+}
+.success
+{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
