--- a/frontend/src/components/Attendance list/attendance.css
+++ b/frontend/src/components/Attendance list/attendance.css
@@ -66,3 +66,16 @@ tr {
     transform: scale(1.5);
     accent-color: rgb(11, 235, 11);
  }
+ .attendanceblacky
+ {
+  background-color: black;
+  height: 100vh;
+  width: 100%;
+  opacity: 0.7;
+  transform: translateY(-110.4%);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ }
