--- a/frontend/src/components/Study Material/study.css
+++ b/frontend/src/components/Study Material/study.css
@@ -7,3 +7,16 @@
     border-width: 0.5px;
     color: black;
 }
+.studyblacky
+{
+    background-color: black;
+    height: 100vh;
+    width: 100%;
+    opacity: 0.9;
+    transform: translateY(-100%);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
