--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -12,15 +12,18 @@
     padding-top: 1rem;
 }
 
+.pblock{
+    height: 25rem;
+    background: lightgray;
+    border-radius: 15px;
+}
 
 .emp-profile {
     margin-bottom: 3%;
     border-radius: 0.5rem;
-    background: lightgray;
     text-align: center;
     transform: translateY(3rem);
     margin: 0 15%;
-    height: 60%;
 
     /* box-shadow: rgb(0 0 0 / 17%) 0px -23px 25px 0px inset, rgb(0 0 0 / 15%) 0px -36px 30px 0px inset, rgb(0 0 0 / 10%) 0px -79px 40px 0px inset, rgb(0 0 0 / 6%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 4px 2px, rgb(0 0 0 / 9%) 0px 8px 4px, rgb(0 0 0 / 9%) 0px 16px 8px, rgb(0 0 0 / 9%) 0px 32px 16px; */
 }
