--- a/frontend/src/components/Assignment_report/assignment_report.css
+++ b/frontend/src/components/Assignment_report/assignment_report.css
@@ -5,3 +5,21 @@
     width: 60%;
     margin-bottom: 20px;
 }
+
+#inputfilechoose{
+    width: 5rem;
+    opacity: 0;
+    position: relative;
+    z-index: 1;
+}
+
+#uploadandsubmitblock{
+    position: relative;
+    display: grid;
+}
+
+.upload_button{
+    width: 5rem;
+    left: 0;
+    position: absolute;
+}
