--- a/frontend/src/components/Filters/filters.css
+++ b/frontend/src/components/Filters/filters.css
@@ -1,5 +1,3 @@
-
-
 .form-control-8 {
     width: 60%;
     text-align: center;
@@ -12,7 +10,7 @@
 
 
 .table-24 {
- margin: 0 20%;
+    margin: 0 20%;
     margin-bottom: 40px;
 }
 
@@ -20,9 +18,9 @@
     margin-top: 20px;
 }
 
- #date_block1 {
+#date_block1 {
     text-align: center;
- }
+}
 
 .form-control-12 {
     width: 15rem;
@@ -33,4 +31,10 @@
 .overall-1 {
     margin-top: 20px;
     text-align: center;
+}
+
+@media screen and (max-width : 500px) {
+    .table-24 {
+        margin: 0 6%;
+    }
 }
