--- a/frontend/src/components/Attendance list/attendance.css
+++ b/frontend/src/components/Attendance list/attendance.css
@@ -14,6 +14,7 @@ tr {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0;
   width:60%;
   margin: auto;
   margin-top: 7px;
