--- a/frontend/src/components/Teacher_dashboard/change_teach_password.css
+++ b/frontend/src/components/Teacher_dashboard/change_teach_password.css
@@ -4,8 +4,8 @@
     align-items: center;
 }
 
-.alert {
-    position: absolute;
-    top: 0;
-    width: 100%;
+.alertmessage {
+   color: red;
+   font-size: 13px;
+   text-align: initial;
 }
