--- a/frontend/src/components/Teacher_dashboard/Navbar.css
+++ b/frontend/src/components/Teacher_dashboard/Navbar.css
@@ -11,6 +11,11 @@
     background: none;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .heading {
     display: flex;
     margin-left: 2rem;
