--- a/frontend/src/components/Student_dashboard/Navbar.css
+++ b/frontend/src/components/Student_dashboard/Navbar.css
@@ -6,6 +6,11 @@
     background: none;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .heading {
     display: flex;
     margin-left: 2rem;
