--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -18,6 +18,10 @@
     border-radius: 15px;
 }
 
+a{
+    text-decoration: none;
+}
+
 .emp-profile {
     margin-bottom: 3%;
     border-radius: 0.5rem;
