--- a/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
+++ b/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
@@ -55,11 +55,11 @@
     width: 12%;
     margin-left: 1%;
 }
-
+/* 
 rep-1 {
     display: flex;
-    /* margin: 0 20%; */
-}
+     margin: 0 20%; 
+} */
 
 .nothing_block {
     text-align: center;
