--- a/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
+++ b/frontend/src/components/Scheduled_Class_List/Scheduledcommon.css
@@ -14,7 +14,7 @@
     margin-right: 20%; 
     width: 60%;
     margin-top: 40px;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
 }
 
 .btn-primary:hover {
@@ -66,4 +66,8 @@ rep-1 {
     padding: 20px 0;
     font-size: 30px;
     color: #9a0b01;
+}
+
+.button_block8 {
+    margin-top: 2rem;
 }
