--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,11 +24,15 @@ code {
 }
 
 .height100vh {
-  height: 100%;
+  height: 100vh;
 }
 
 .overflowxauto{
   overflow-x: auto;
+}
+
+.height100percent{
+    height : 100%
 }
 
 
