--- a/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
@@ -20,7 +20,16 @@ html {
 
 .dashblocks {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    margin-top: 2rem;
+    border-radius: 50%;
+    --bs-gutter-x: 0.;
+
+}
+
+.dashblockteacher {
+    display: flex;
+    justify-content:space-evenly;
     margin-top: 2rem;
     border-radius: 50%;
     --bs-gutter-x: 0.;
@@ -28,6 +37,11 @@ html {
 }
 
 .dashblocks>a {
+    width: fit-content;
+    color: black;
+}
+
+.dashblockteacher>a {
     width: fit-content;
     color: black;
 }
@@ -114,6 +128,7 @@ html {
     background: #D9D9D9;
     /* box-shadow: 0px 1px 5px rgb(121, 120, 120); */
 }
+
 
 .classinfoval>* {
     margin-top: 2rem;
