--- a/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
@@ -1,7 +1,3 @@
-html {
-    background: rgb(248, 246, 246);
-}
-
 .flex {
     display: flex;
 }
@@ -29,7 +25,7 @@ html {
 
 .dashblockteacher {
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     margin-top: 2rem;
     border-radius: 50%;
     --bs-gutter-x: 0.;
@@ -74,7 +70,7 @@ html {
 
 .datacontent {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     margin-bottom: 2rem;
 }
@@ -84,9 +80,7 @@ html {
     width: 100vw;
 }
 
-.dashboardcontent {
-    background: rgb(248, 246, 246);
-}
+
 
 
 
@@ -113,15 +107,18 @@ html {
 }
 
 .classinfo {
+    margin-top: 2rem;
     text-align: center;
-    margin-left: 3rem;
+    display: flex;
+    width: 84vw;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    margin-left: 8%;
+    justify-content: center;
 }
 
-.classinfo>* {
-    margin-top: 2rem;
+.classinfokey {
     height: 3rem;
     display: flex;
-    /* box-shadow: rgb(0 0 0 / 26%) 0px 0px 5px, rgba(128, 128, 128, 0.23) 1px 8px 1px; */
     align-items: center;
     justify-content: center;
     width: 66vw;
@@ -129,20 +126,42 @@ html {
     /* box-shadow: 0px 1px 5px rgb(121, 120, 120); */
 }
 
+.classinfoval {
 
-.classinfoval>* {
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 18vw;
+    background: #2BB0A8;
+}
+
+/* .classinfo>* {
+    margin-top: 2rem;
+    height: 3rem;
+    display: flex;
+    box-shadow: rgb(0 0 0 / 26%) 0px 0px 5px, rgba(128, 128, 128, 0.23) 1px 8px 1px;
+    align-items: center;
+    justify-content: center;
+    width: 66vw;
+    background: #D9D9D9;
+    box-shadow: 0px 1px 5px rgb(121, 120, 120); 
+} */
+
+
+/* .classinfoval>* {
     margin-top: 2rem;
     height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
     /* box-shadow: rgb(0 0 0 / 26%) 0px 0px 5px, rgba(128, 128, 128, 0.23) 1px 8px 1px; */
-    width: 18vw;
+/* width: 18vw;
     background: #2BB0A8;
-    margin-right: 2rem;
-    /* box-shadow: 1px 1px 5px rgb(121, 120, 120); */
-}
-.background{
+    margin-right: 2rem; */
+/* box-shadow: 1px 1px 5px rgb(121, 120, 120); 
+} */
+.background {
     width: 100vw;
-   box-shadow: 2px 0px 2px rgb(147, 145, 145);
+    box-shadow: 2px 0px 2px rgb(147, 145, 145);
 }
