--- a/frontend/src/components/Teacher_dashboard/teacherprofile2.css
+++ b/frontend/src/components/Teacher_dashboard/teacherprofile2.css
@@ -154,7 +154,7 @@ a {
         display: block;
     }
     .teacherinfo2>h6{
-        color: #ffffff;
+        color: #00684A;
     }
     .teacherinfo2>p{
         font-weight: bold;
