--- a/frontend/src/components/Teacher_dashboard/notifications.css
+++ b/frontend/src/components/Teacher_dashboard/notifications.css
@@ -1,5 +1,6 @@
 .noti
 {
+    padding-top: 8.3px;
     background-color: white;
     margin: 10px;
     height: 50px;
@@ -9,7 +10,12 @@
 }
 .notification
 {    
-
     margin-top: 2.5rem;
     align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+    .fontselect {
+        font-size: 15px;
+    }
 }
